--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "install": "^0.13.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
